--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Артем Тарасов</title>
-    <link rel="stylesheet" href="/accets/css/normalize.css">
+    <link rel="stylesheet" href="/design-kit/accets/css/normalize.css">
     <link rel="stylesheet" href="/design-kit/accets/css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -377,14 +377,14 @@
                                 Получи подарок — часовая консультация маркетолога
                             </span>
                         </div>
-                        <img class="body-content__left-img body-content__img-animation" src="/accets/img/main-left.png" alt="">
-                        <img class="body-content__right-img body-content__img-animation" src="/accets/img/main-right.png" alt="">
+                        <img class="body-content__left-img body-content__img-animation" src="/design-kit/accets/img/main-left.png" alt="">
+                        <img class="body-content__right-img body-content__img-animation" src="/design-kit/accets/img/main-right.png" alt="">
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="/accets/js/main.js"></script>
+    <script src="/design-kit/accets/js/main.js"></script>
 
 </body>
 </html>
